--- a/sharepoint/Documents/css/ie8.css
+++ b/sharepoint/Documents/css/ie8.css
@@ -93,6 +93,7 @@
 	width: 100%;
 	height: 100%;
 }
+
 .ie8 .insight .content .right-col > div .tr > span.txt {
 	float: left;
 	text-align: left;
@@ -113,6 +114,10 @@
 	height: 46px;
 	line-height: 46px;
 	text-align: center;
+}
+.ie8 .insight .content .right-col > div .tr > span.num .txt{
+	width: 50px;
+	height: 50px;
 }
 .ie8 .insight .content .right-col > div .tr > span.num img {
 	display: inline-block;
